--- a/人工智能.md
+++ b/人工智能.md
@@ -1233,7 +1233,7 @@ $$
 这是一个端到端的方法，音频经过一个卷积核大小为L，步长为 L//2 的一维卷积转为特征，再输入Separator中计算多个mask，每个mask对应一个语音。
 
 
-![](./images/conv_tasnet_arch.png)
+![](images\conv_tasnet_arch.png)
 
 每一个1-D Conv block 有两路输出，其中有一路和输入相加后作为下一个卷积模块的输入，另一路输出是计算mask时的输出，Conv-TasNet 在计算mask时将所有的1-D Conv block 另一路输出加起来。
 
@@ -1242,7 +1242,7 @@ $$
 
 [espnet/espnet2/enh/layers/skim.py at master · espnet/espnet](https://github.com/espnet/espnet/blob/master/espnet2/enh/layers/skim.py)
 
-![](./images/skim_arch.png)
+![](images\skim_arch.png)
 
 对于输入特征 $W^{T\times N}$，将其按照时间分成 S 块，每块长度为 K。假设第 $l$ 层Skim块的输入为 $[W_l^1,W_l^2,\cdots, W_l^S]$，那么Seg-LSTM的映射函数可以写成
 
@@ -1275,7 +1275,7 @@ $$
 
 ### Sepformer
 
-![](./images/sepformer_arch.png)
+![](images\sepformer_arch.png)
 
 将Transformer用于语音分离，注意这里的IntraTransformer和InterTransformer并不是指对于时间维度和频率维度进行处理。
 
@@ -1286,7 +1286,7 @@ $$
 
 [dmlguq456/SepReformer: Official repository of SepReformer for speech separation](https://github.com/dmlguq456/SepReformer)
 
-![](https://github.com/dmlguq456/SepReformer/raw/main/data/figure/SepReformer_Architecture.png)
+![](images/SepReformer_Architecture.png)
 
 输入 $x\in R^{1\times N}$ 经过一维卷积+GELU为 $X\in R^{F\times T}$，经过一个编码器，编码器中的 Global transformer 和 Local Transformer 的结构如下
 
@@ -2547,16 +2547,16 @@ Mamba 块的结构如下所示
 
 对于Mamba，给定输入$\hat x'=(\hat x_1', \cdots, \hat x_L')$，输出$\hat y$可以表示为
 
-![](images/ai/mamba_9.png)
+![](images\ai\mamba_9.png)
 S6可以表示为 $h_t = \bar A h_{t-1} + \bar B x_t, y_t=Ch_t$，几个矩阵的公式为（Sp为softplus）
 
-![](images/ai/mamba_6-8.png)
+![](images\ai\mamba_6-8.png)
 S6会对每个通道的数据处理相互独立，所以仅考虑单个通道的输入，则有
-![](images/ai/mamba_12.png)
+![](images\ai\mamba_12.png)
 用 $\tilde \alpha$ 来表示y关于x的系数，即 $y=\tilde \alpha x$。将之前几个矩阵的公式带入进去，可以得到
-![](images/ai/mamba_17.png)
+![](images\ai\mamba_17.png)
 softplus可以用relu近似，得到
-![](images/ai/mamba_19.png)
+![](images\ai\mamba_19.png)
 即最后可以简化为 $\tilde \alpha_{i,j} ≈ \tilde Q_i \tilde H_{i,j} \tilde K_j$
 
 相比于Transformer中的Attention，mamba中加入了 $\tilde H_{i,j}$ 来控制不同位置之间的重要性。
@@ -2573,7 +2573,7 @@ softplus可以用relu近似，得到
 
 简写为H3，也是一种状态空间模型，基本结构如下所示
 
-![](images/h3.png)
+![](images\h3.png)
 
 对 x 进行映射，得到Q、K、V，K 经过一个SSM，这里是一个卷积操作，但是为了避免卷积核过大导致计算量增加，使用FFT实现卷积
 
@@ -2971,7 +2971,7 @@ flowchart LR
 ```
 
 下面介绍一个具体的例子[Build a semantic search engine with LangChain - Docs by LangChain](https://docs.langchain.com/oss/python/langchain/knowledge-base)
-先安装库langchain-community和pypdf，为了跟踪agent的内部过程，可以使用[langSmith](https://smith.langchain.com/)，下载一个[示例pdf](https://github.com/langchain-ai/langchain/blob/v0.3/docs/docs/example_data/nke-10k-2023.pdf)，首先加载pdf，然后再切分文本，将文本送入模型编码为embeddings（不同模型使用的embedding方法不同），embedding一般会存储在向量数据库（如chroma）中，向量数据库会提供一些方法进行相似度搜索
+先安装库langchain-community和pypdf，为了跟踪agent的内部过程，可以使用[langSmith](https://smith.langchain.com/)。下载一个[示例pdf](https://github.com/langchain-ai/langchain/blob/v0.3/docs/docs/example_data/nke-10k-2023.pdf)，首先加载pdf，然后再切分文本，将文本送入模型编码为embeddings（不同模型使用的embedding方法不同），embedding一般会存储在向量数据库（如chroma）中，向量数据库会提供一些方法进行相似度搜索
 
 ```python
 from langchain_community.document_loaders import PyPDFLoader
@@ -3141,7 +3141,7 @@ MiniMind 中包括了两种结构的模型：
 
 2. MiniMind-MoE模型，基于Llama3和[Deepseek-V2](https://arxiv.org/pdf/2405.04434)中的MixFFN混合专家模块。DeepSeek-V2在前馈网络（FFN）方面，采用了更细粒度的专家分割和共享的专家隔离技术，以提高Experts的效果。
 
-![](./images/LLM-structure-moe.png)
+![](images\LLM-structure-moe.png)
 
 
 ### 训练流程
