--- a/工具使用.md
+++ b/工具使用.md
@@ -13,7 +13,7 @@ npm create astro@latest
 
 有四种模板可选
 
-![](images/tools/astro_tmpl.png)
+![](images\tools\astro_tmpl.png)
 
 Astro项目会有以下项目
 
@@ -146,7 +146,7 @@ export default defineConfig({
 
 3. 在远程仓库的设置页面，找到Pages页面，选择Source为Github Actions
 
-![](images/tools/github_pages.png)
+![](images\tools\github_pages.png)
 在选择完Github Actions后，可以选择browse all workflows，选择astro，这样会在`.github/workflows`创建`astro.yml`。
 
 
@@ -313,15 +313,15 @@ uv run python main.py
 
 1、在google scholar 中搜索文献，并将文件保存到我的图书馆中
 
-![](./images/endnote/google_scholar_save.png)
+![](images\endnote\google_scholar_save.png)
 
 2、将所有的文献全部保存好之后，在我的图书馆中点击全部导出->endnote
 
-![](./images/endnote/google_scholar_export_all.png)
+![](images\endnote\google_scholar_export_all.png)
 
 3、导出后的文件双击即可导入endnote中，如果需要插入word，可以直接将光标放到插入的位置上，然后在Endnote中点击插入
 
-![](./images/endnote/endnote_insert.png)
+![](images\endnote\endnote_insert.png)
 
 
 
@@ -1849,7 +1849,7 @@ AuraDB是一款在线的图数据库，网址为 [neo4j](https://console.neo4j.i
 图数据库运行在实例（Instance）中，每次创建实例后，会生成对应的密码，用于后续的连接。
 进入实例后，首先需要导入数据，进入 Import 界面，首先先创建节点，点击这个按钮来创建节点
 
-![image-20231228194632204](D:\TyporaImages\image-20231228194632204.png)
+![image-20231228194632204](images\工具使用\image-20231228194632204.png)
 
 选择该节点，创建节点的属性，可以直接从 csv 文件中导入。
 
