--- a/推荐算法.md
+++ b/推荐算法.md
@@ -292,7 +292,7 @@ $$
 
 NCF 是一种矩阵分解模型，集成了广义矩阵分解（GMF）和MLP，如下图所示
 
-![](images/recommend/ncf.svg)
+![](images\recommend\ncf.svg)
 
 
 GMF 可以表示为 
@@ -331,10 +331,10 @@ $$
 
 LightGCN是轻量化的图协同过滤算法，将图卷积网络用于推荐系统。
 
-![](images/recommend/lightgcn.png)
+![](images\recommend\lightgcn.png)
 
 将用户对物品的评分看成一条边
-![](images/recommend/lightgcn2.jpg)
+![](images\recommend\lightgcn2.jpg)
 对于 lightGCN，使用简单的加权求和进行汇聚，所以只需要训练第0层的参数，即所有用户的 $\mathbf{e}_{u}^{(0)}$ 和所有物品的 $\mathbf{e}_{i}^{(0)}$，经过k层的加权求和得到
 $$
 \mathbf{e}_{u}=\sum_{k=0}^{K} \alpha_{k} \mathbf{e}_{u}^{(k)} ; \quad \mathbf{e}_{i}=\sum_{k=0}^{K} \alpha_{k} \mathbf{e}_{i}^{(k)}
@@ -371,7 +371,7 @@ BPR（Bayesian Personalized Ranking，贝叶斯个性化排序）可以为每个
 
 BiVAE 则将用户和物品同时表示出来
 
-![](images/recommend/bivae.jpg)
+![](images\recommend\bivae.jpg)
 
 
 
@@ -413,7 +413,7 @@ BiVAE 则将用户和物品同时表示出来
 
 DKN 利用知识图谱来实现新闻推荐，DKN 的结构如下图所示
 
-![](images/recommend/dkn.png)
+![](images\recommend\dkn.png)
 
 DKN 的输入是用户点击过的新闻，设计了KCNN模块来处理新闻标题得到嵌入特征。
 
