--- a/数值分析.md
+++ b/数值分析.md
@@ -82,11 +82,11 @@ $$
 $$
 **举例**：计算双精度浮点的求和($1+3\times2^{-53}$)-1
 
-![image-20231101144341444](D:\TyporaImages\image-20231101144341444.png)
+![image-20231101144341444](images\数值分析\image-20231101144341444.png)
 
 由于求和后的53位是1，又52位也是1，所以需要在第52位上加上1，即最后结果为：
 
-![image-20231101144503039](D:\TyporaImages\image-20231101144503039.png)
+![image-20231101144503039](images\数值分析\image-20231101144503039.png)
 
 在减去1后，结果为$2^{-51}$，因为舍入误差导致最后的结果不为0。
 
@@ -172,7 +172,7 @@ $$
 
 使用**cobweb图**描述不动点迭代的几何图示
 
-![image-20231101185232379](D:\TyporaImages\image-20231101185232379.png)
+![image-20231101185232379](images\数值分析\image-20231101185232379.png)
 
 可以看到对于 $g(x)=1-x^3$ 而言，在迭代时会出现发散的情况，因此最后无法收敛，而是否能够收敛与函数在不动点附近的斜率有关。
 
@@ -1399,7 +1399,7 @@ $$
 
 $\delta_i=x_{i+1}-x_i$，$\Delta_i=y_{i+1}-y_i$
 
-![image-20231103222300906](D:\TyporaImages\image-20231103222300906.png)
+![image-20231103222300906](images\数值分析\image-20231103222300906.png)
 
 **自然三次样条**
 
@@ -3493,7 +3493,7 @@ $$
 
 我们将用DCT4对应的矩阵E来构造MDCT变换，设n为偶数，我们要用列$c_{n\over 2}$，...，$c_{{5\over 2}n-1}$构造一个新的矩阵。上面的引理说明，对任意整数j，$c_j$都可以用DCT4中的某一列来表示，即0≤i≤n-1中的某个$c_i$，如下图所示。
 
-![image-20231105185249948](D:\TyporaImages\image-20231105185249948.png)
+![image-20231105185249948](images\数值分析\image-20231105185249948.png)
 
 **定义**：令n为正偶数，向量$x=(x_0,\cdots,x_{2n-1})^T$的**修正的DCT**（MDCT）为n维向量
 $$
