--- a/数学.md
+++ b/数学.md
@@ -737,7 +737,7 @@ $$
 
 由此可以得出$\mathbb{Z}(N)$是复乘法下的一个阿贝尔群。下图是对$\mathbb{Z}(N)$的可视化，
 
-![image-20231019102320023](D:\TyporaImages\image-20231019102320023.png)
+![image-20231019102320023](images\数学\image-20231019102320023.png)
 
 ##### $\mathbb{Z}(N)$上的傅里叶逆定理与Plancherel恒等式
 
@@ -871,7 +871,7 @@ $$
 $$
 \zeta(s)=\sum_{n=1}^{\infty}\frac{1}{n^s}
 $$
-![image-20231019151723674](D:\TyporaImages\image-20231019151723674.png)
+![image-20231019151723674](images\数学\image-20231019151723674.png)
 
 由上图可得：
 $$
