--- a/经济学.md
+++ b/经济学.md
@@ -98,7 +98,7 @@ $$
 
 #### 税收与无谓损失
 
-![image-20231014164448199](D:\TyporaImages\image-20231014164448199.png)
+![image-20231014164448199](images\经济学\image-20231014164448199.png)
 
 当没有税收时，消费者剩余为A+B+C，生产者剩余为D+E+F；存在税收时消费者剩余为A，生产者剩余为D，税收为B+D，而总剩余则无谓损失了C+E。税收扭曲了激励，使市场规模缩小到最优水平之下，引起了市场配置资源时的无效率。税收引起无谓损失是因为它使买者和卖者不能实现某些贸易的好处。
 
@@ -185,7 +185,7 @@ $$
 
 **四种企业类型**：
 
-![image-20231014215549931](D:\TyporaImages\image-20231014215549931.png)
+![image-20231014215549931](images\经济学\image-20231014215549931.png)
 
 垄断竞争会导致生产能力过剩，即企业的有效规模大于产量，有效规模指平均总成本最小时的规模。与完全竞争不同，完全竞争时，价格等于边际成本，而在垄断竞争时，价格高于边际成本。
 
@@ -389,7 +389,7 @@ $$
 
 在长期中，物价总水平会调整到使货币需求等于货币供给的水平。如果物价水平高于均衡水平，人们想要持有的货币量就大于政府所创造的货币量，所以物价水平必然下降以使供求平衡。如果物价水平低于均衡水平，人们想要持有的货币量就小于政府所创造的货币量，此时物价水平必然上升以使供求平衡。在均衡的物价水平下，人们想要持有的货币量与政府所供给的货币量恰好相等。
 
-![image-20231015131036139](D:\TyporaImages\image-20231015131036139.png)
+![image-20231015131036139](images\经济学\image-20231015131036139.png)
 
 政府印刷的货币增加，即货币供给线右移，此时货币价值下降，物价升高。
 
@@ -516,7 +516,7 @@ $$
 
 菲利普斯曲线说明，短期中出现的通货膨胀与失业的组合是由于总需求曲线的移动使经济沿着短期总供给曲线变动。
 
-![image-20231015154201482](D:\TyporaImages\image-20231015154201482.png)
+![image-20231015154201482](images\经济学\image-20231015154201482.png)
 
 
 
