--- a/人工智能.md
+++ b/人工智能.md
@@ -2631,6 +2631,13 @@ $$
 4. 根据上面的方法1，${N_{opt}} \propto {C^{0.5}}\quad {D_{opt}} \propto {C^{0.5}}$，给定C=6ND，Chinchilla给出的结论为：训练 tokens 数约等于模型参数数量的20倍
 5. 根据$\alpha$和$\beta$判断通过模型规模还是数据规模来降低损失
 
+
+## AnythingLLM
+
+[Mintplex-Labs/anything-llm: The all-in-one Desktop & Docker AI application with built-in RAG, AI agents, No-code agent builder, MCP compatibility, and more.](https://github.com/Mintplex-Labs/anything-llm)
+
+集成了langchain、ollama等工具
+
 ## vllm
 
 [vllm-project/vllm: A high-throughput and memory-efficient inference and serving engine for LLMs](https://github.com/vllm-project/vllm)
