--- a/人工智能.md
+++ b/人工智能.md
@@ -1218,7 +1218,7 @@ $$
 这里的 $q(x_i)$ 一般经过softmax。
 
 
-# 经典模型
+# 深度神经网络
 
 
 ## 语音分离
@@ -1932,6 +1932,39 @@ $$
 其中 ${\varphi _i}({z_t}) \in {R^{N \times d_\varepsilon ^i}}$ 是UNet中一个展开的中间表示。
 
 
+### JiT
+
+直接预测图像
+
+扩散模型可以从ODE的角度解释，假设数据分布符合$x\sim p_{data}(x)$，噪声分布符合$\varepsilon \sim p_{noise}(\varepsilon)$，训练时，通过插值来采样噪声样本，$z_t = a_t x+b_t\epsilon$，$a_t$和$b_t$是采样策略，如$a_t=t, b_t = 1-t$，$t$符合logitnormal分布。当t为0时$z_t$为噪声，t为1时为数据。flow velocity $v$定义为$z_t$的导数，即$v_t = z'_t=a'_t x - b'_t \varepsilon$
+$$
+v = x-\varepsilon
+$$
+基于流的方法通过最小化模型预测的$v_{\theta}(z_t,t)$和$v$之间的mse损失。
+
+**预测空间**：网络直接的输出可以为 $v$、$x$或者 $\varepsilon$，给定$(v, x, \varepsilon)$这三个未知量和一个网络的输出，再加上上面的插值方程和 $v$ 的计算公式，可以求解这三个未知量。假设网络输出$net_{\theta}$为$x$，则可以得到下面这个方程组
+
+$$
+\left\{ \matrix{
+  {x_\theta } = ne{t_\theta } \hfill \cr 
+  {z_t} = t{x_\theta } + (1 - t){\varepsilon _\theta } \hfill \cr 
+  {v_\theta } = {x_\theta } - {\varepsilon _\theta } \hfill \cr}  \right.
+$$
+求解这个方程组可以得到$\varepsilon_{\theta}$和$v_{\theta}$。
+
+**损失空间**：$v$、$x$或者 $\varepsilon$都可以作为损失，如$v$损失定义为
+
+$$
+\eqalign{
+  & L = E{\left\| {{v_\theta } - v} \right\|^2} = E{\left\| {\left( {{x_\theta } - {\varepsilon _\theta }} \right) - \left( {x - \varepsilon } \right)} \right\|^2}  \cr 
+  &  = E{\left\| {\left( {{x_\theta } - {{{z_t} - t{x_\theta }} \over {1 - t}}} \right) - \left( {x - {{{z_t} - tx} \over {1 - t}}} \right)} \right\|^2}  \cr 
+  &  = E{\left\| {{{{x_\theta }} \over {1 - t}} - {x \over {1 - t}}} \right\|^2} = E{1 \over {{{\left( {1 - t} \right)}^2}}}{\left\| {{x_\theta }({z_t},t) - x} \right\|^2} \cr} 
+$$
+
+> JiT采用了预测$x$，$v$损失的方式训练模型。
+
+
+
 ## 生成对抗模型
 
 ### GAN
@@ -2384,8 +2417,73 @@ $$
 BigVGAN使用大规模数据集进行训练，效果会更好。
 
 
+### RVQGAN
 
-# 新模型
+论文：[High-Fidelity Audio Compression with Improved RVQGAN](https://arxiv.org/abs/2306.06546)
+
+代码：[descriptinc/descript-audio-codec: State-of-the-art audio codec with 90x compression factor. Supports 44.1kHz, 24kHz, and 16kHz mono/stereo audio.](https://github.com/descriptinc/descript-audio-codec)
+
+音频编码器，支持44.1kHz，24kHz和16kHz，模型权重可在releases中下载
+
+RVQGAN使用Residual Vector Quantization来量化编码，感觉量化后更大了，如果想要减小维度，还是用soloaudio中的量化方法比较好。
+
+
+## 语言建模模型
+
+### RetNet
+
+[[2307.08621] Retentive Network: A Successor to Transformer for Large Language Models](https://arxiv.org/abs/2307.08621)
+[microsoft/torchscale: Foundation Architecture for (M)LLMs](https://github.com/microsoft/torchscale)
+
+提出了multi-scale retention 模块（MSR）替换多头注意力模块，MSR模块可以实现并行训练和递归推理。
+
+## RNN变体
+
+### QRNN
+
+[[1611.01576] Quasi-Recurrent Neural Networks](https://arxiv.org/abs/1611.01576)
+
+原始代码：[salesforce/pytorch-qrnn: PyTorch implementation of the Quasi-Recurrent Neural Network - up to 16 times faster than NVIDIA's cuDNN LSTM](https://github.com/salesforce/pytorch-qrnn)
+
+原始代码版本较低，修改后的代码为：[Xiang-M-J/pytorch-qrnn: Rewrote ForgetMult using CuPy.](https://github.com/Xiang-M-J/pytorch-qrnn)
+
+使用时最好堆叠多层
+
+### SRU
+
+论文：[Simple Recurrent Units for Highly Parallelizable Recurrence](https://arxiv.org/abs/1709.02755)
+
+代码：[asappresearch/sru: Training RNNs as Fast as CNNs (https://arxiv.org/abs/1709.02755)](https://github.com/asappresearch/sru)
+
+使用时最好堆叠多层，可以用于语音任务
+
+
+### gilr
+
+论文：[Parallelizing Linear Recurrent Neural Nets Over Sequence Length](https://arxiv.org/abs/1709.04057)
+
+代码：[eamartin/parallelizing_linear_rnns](https://github.com/eamartin/parallelizing_linear_rnns)
+
+
+### mingru
+
+论文：[Were RNNs All We Needed?](https://arxiv.org/abs/2410.01201)
+
+代码：[lucidrains/minGRU-pytorch: Implementation of the proposed minGRU in Pytorch](https://github.com/lucidrains/minGRU-pytorch)
+
+和girl挺像的
+
+### xlstm
+
+论文：[xLSTM: Extended Long Short-Term Memory](https://arxiv.org/abs/2405.04517)
+
+代码：[NX-AI/xlstm: Official repository of the xLSTM.](https://github.com/NX-AI/xlstm)
+
+
+
+# 新架构
+
+介绍一些不同于MLP、RNN、Convolution和Transformer的架构
 
 ## KAN
 
@@ -2580,14 +2678,6 @@ softplus可以用relu近似，得到
 有人用这个模型替换Conformer中的注意力，[ISCA Archive - Efficient and Robust Long-Form Speech Recognition with Hybrid H3-Conformer](https://www.isca-archive.org/interspeech_2024/honda24_interspeech.html)
 
 
-## 语言建模模型
-
-### RetNet
-
-[[2307.08621] Retentive Network: A Successor to Transformer for Large Language Models](https://arxiv.org/abs/2307.08621)
-[microsoft/torchscale: Foundation Architecture for (M)LLMs](https://github.com/microsoft/torchscale)
-
-提出了multi-scale retention 模块（MSR）替换多头注意力模块，MSR模块可以实现并行训练和递归推理。
 
 
 
