--- a/人工智能.md
+++ b/人工智能.md
@@ -2673,16 +2673,16 @@ Mamba 块的结构如下所示
 
 对于Mamba，给定输入$\hat x'=(\hat x_1', \cdots, \hat x_L')$，输出$\hat y$可以表示为
 
-![](images\ai\mamba_9.png)
+![](images/ai/mamba_9.png)
 S6可以表示为 $h_t = \bar A h_{t-1} + \bar B x_t, y_t=Ch_t$，几个矩阵的公式为（Sp为softplus）
 
-![](images\ai\mamba_6-8.png)
+![](images/ai/mamba_6-8.png)
 S6会对每个通道的数据处理相互独立，所以仅考虑单个通道的输入，则有
-![](images\ai\mamba_12.png)
+![](images/ai/mamba_12.png)
 用 $\tilde \alpha$ 来表示y关于x的系数，即 $y=\tilde \alpha x$。将之前几个矩阵的公式带入进去，可以得到
-![](images\ai\mamba_17.png)
+![](images/ai/mamba_17.png)
 softplus可以用relu近似，得到
-![](images\ai\mamba_19.png)
+![](images/ai/mamba_19.png)
 即最后可以简化为 $\tilde \alpha_{i,j} ≈ \tilde Q_i \tilde H_{i,j} \tilde K_j$
 
 相比于Transformer中的Attention，mamba中加入了 $\tilde H_{i,j}$ 来控制不同位置之间的重要性。
@@ -2699,7 +2699,7 @@ softplus可以用relu近似，得到
 
 简写为H3，也是一种状态空间模型，基本结构如下所示
 
-![](images\h3.png)
+![](images/h3.png)
 
 对 x 进行映射，得到Q、K、V，K 经过一个SSM，这里是一个卷积操作，但是为了避免卷积核过大导致计算量增加，使用FFT实现卷积
 
