--- a/图像相关.md
+++ b/图像相关.md
@@ -1,4 +1,264 @@
 
+# 数学基础
+
+## 向量运算
+
+### 齐次坐标
+
+齐次坐标（homogeneous coordinates）是坐标的一种表示形式，它用一个n+1 维向量或点表示一个 n维向量或点。
+
+在 $n$ 维欧氏空间中，一个点  
+$$  
+\mathbf{x} = (x_1, x_2, \dots, x_n)^\top \in \mathbb{R}^n  
+$$  
+对应的**齐次坐标表示**为：  
+$$  
+\tilde{\mathbf{x}} =  
+(\lambda x_1, \lambda x_2, \dots, \lambda x_n, \lambda)^\top  
+\in \mathbb{R}^{n+1}, \quad \lambda \neq 0  
+$$
+
+二维平面中的直线 $ax + by + c = 0$ 的齐次坐标表示为 $\mathbf{l} = (a, b, c)^\top$
+
+二维向量$(x,y)^T$的齐次坐标为$(x,y,0)^T$。
+
+点在线上的条件：$\mathbf{l}^\top \mathbf{x} = 0$。
+
+在齐次坐标系下，点和直线对偶，两条直线$l_1$和$l_2$的交点可以通过两直线的叉积求出，通过两点${\bf{x}}_1$和${\bf{x}}_2$的直线可以通过两点的叉积求出。
+
+
+### 向量加法 (Vector Addition)
+
+设有两个 $n$ 维向量 $\mathbf{a} = [a_1, a_2, \dots, a_n]$ 和 $\mathbf{b} = [b_1, b_2, \dots, b_n]$。
+
+公式：
+
+$$\mathbf{a} + \mathbf{b} = [a_1 + b_1, a_2 + b_2, \dots, a_n + b_n]$$
+
+**几何意义：**
+- **平行四边形法则：** 如果将两个向量的起点放在一起，它们的和就是以这两个向量为邻边构成的平行四边形的对角线。
+- **位移累加：** 代表从原点出发，先进行 $\mathbf{a}$ 方向的位移，再接续进行 $\mathbf{b}$ 方向的位移，最终达到的位置。
+### 点积 (Dot Product / Scalar Product)
+
+点积的结果是一个标量（数值）。
+
+代数公式：
+
+$$\mathbf{a} \cdot \mathbf{b} = \sum_{i=1}^{n} a_i b_i = a_1b_1 + a_2b_2 + \dots + a_nb_n$$
+
+几何公式：
+
+$$\mathbf{a} \cdot \mathbf{b} = \|\mathbf{a}\| \|\mathbf{b}\| \cos \theta$$
+
+其中 $\theta$ 是两个向量之间的夹角，$\|\mathbf{a}\|$ 是向量的模（长度）。
+
+**几何意义：**
+
+- **投影：** 点积反映了一个向量在另一个向量方向上的**投影强度**乘以另一个向量的长度。
+- **相似度判断：** 
+	- 若 $\mathbf{a} \cdot \mathbf{b} > 0$，夹角为锐角（方向相近）
+    - 若 $\mathbf{a} \cdot \mathbf{b} = 0$，两个向量**正交**（垂直）
+    - 若 $\mathbf{a} \cdot \mathbf{b} < 0$，夹角为钝角（方向相反）
+
+### 叉积 (Cross Product)
+
+> **注意：** 叉积主要定义在三维空间中，结果是一个新的向量。
+
+公式：
+
+$$\mathbf{a} \times \mathbf{b} = \begin{vmatrix} \mathbf{i} & \mathbf{j} & \mathbf{k} \\ a_1 & a_2 & a_3 \\ b_1 & b_2 & b_3 \end{vmatrix} = [a_2b_3 - a_3b_2, a_3b_1 - a_1b_3, a_1b_2 - a_2b_1]$$
+$$
+\|\mathbf{a} \times \mathbf{b}\|
+=
+\|\mathbf{a}\| \, \|\mathbf{b}\| \sin\theta
+$$
+**几何意义：**
+
+- **垂直向量：** 结果向量 $\mathbf{c}$ 同时垂直于 $\mathbf{a}$ 和 $\mathbf{b}$，方向遵循**右手定则**。
+- **面积：** 叉积的模 $\|\mathbf{a} \times \mathbf{b}\|$ 等于以 $\mathbf{a}$ 和 $\mathbf{b}$ 为邻边构成的**平行四边形的面积**。
+    
+### 向量数乘 (Scalar Multiplication)
+
+设 $k$ 为一个实数。
+$$k\mathbf{a} = [ka_1, ka_2, \dots, ka_n]$$
+
+**几何意义：**
+
+- **伸缩：** 改变向量的长度。如果 $|k| > 1$ 则拉伸，如果 $|k| < 1$ 则压缩。
+- **反向：** 如果 $k < 0$，向量的方向会彻底翻转 $180^\circ$。
+
+### 模 (Magnitude / Norm)
+
+即向量的长度，常用于 L2 正则化。
+公式：
+
+$$\|\mathbf{a}\| = \sqrt{a_1^2 + a_2^2 + \dots + a_n^2} = \sqrt{\mathbf{a} \cdot \mathbf{a}}$$
+
+**几何意义：** 代表点到原点的**欧几里得距离**，通常用来衡量特征向量的大小。
+
+
+### 混合积（Scalar Triple Product）
+
+三个向量作为行（或列）构成的行列式
+$$
+{\bf{a}} \cdot ({\bf{b}} \times {\bf{c}}) = \det [{\bf{a}},{\bf{b}},{\bf{c}}] = \det \left[ {\matrix{
+   {{a_1}} & {{a_2}} & {{a_3}}  \cr 
+   {{b_1}} & {{b_2}} & {{b_3}}  \cr 
+   {{c_1}} & {{c_2}} & {{c_3}}  \cr 
+
+ } } \right]
+$$
+
+**几何意义**：混合积的绝对值等于三向量张成的平行六面体体积。
+
+**共面判据**：
+$$
+\mathbf{a} \cdot (\mathbf{b} \times \mathbf{c}) = 0
+\iff
+\mathbf{a}, \mathbf{b}, \mathbf{c}\ \text{共面}
+$$
+
+
+### 叉积的矩阵表示 (Cross Product as Matrix-Vector Multiplication)
+
+在三维空间中，向量 $\mathbf{a} \times \mathbf{b}$ 的运算可以转换为一个**反对称矩阵**（Skew-symmetric matrix）与向量的乘法。这在计算刚体旋转和动力学时非常有用。
+
+公式：
+
+若 $\mathbf{a} = [a_1, a_2, a_3]^T$，定义其反对称矩阵为 $[\mathbf{a}]_\times$：
+
+$$[\mathbf{a}]_\times = \begin{bmatrix} 0 & -a_3 & a_2 \\ a_3 & 0 & -a_1 \\ -a_2 & a_1 & 0 \end{bmatrix}$$
+
+则叉积可表示为：
+
+$$\mathbf{a} \times \mathbf{b} = [\mathbf{a}]_\times \mathbf{b}$$
+
+**几何意义**：这种表示法将“旋转轴”转化为一个线性算子，方便在控制理论和计算机图形学中进行矩阵求导。
+
+### 旋转矩阵 (Rotation Matrix)
+
+在三维空间中，绕坐标轴旋转角度 $\theta$ 的旋转矩阵（右手坐标系）如下：
+
+- 绕 Z 轴旋转 $R_z(\theta)$：
+$$R_z(\theta) = \begin{bmatrix} \cos\theta & -\sin\theta & 0 \\ \sin\theta & \cos\theta & 0 \\ 0 & 0 & 1 \end{bmatrix}$$
+- 罗德里格斯旋转公式 (Rodrigues' Rotation Formula)：
+    若绕单位向量轴 $\mathbf{k}$ 旋转 $\theta$，旋转矩阵 $R$ 为：
+$$R = I + (\sin\theta)[\mathbf{k}]_\times + (1-\cos\theta)[\mathbf{k}]_\times^2$$
+其中 $I$ 是单位矩阵。
+
+**几何意义**：旋转矩阵是正交矩阵（$R^T R = I$），它在保持向量长度和夹角不变的情况下，改变向量的空间指向。
+
+**点积保持性**：$(R\mathbf{a}) \cdot (R\mathbf{b})=\mathbf{a} \cdot \mathbf{b}$
+
+**叉积保持性**：$R(\mathbf{a} \times \mathbf{b})=(R\mathbf{a}) \times (R\mathbf{b})$
+
+**与叉乘矩阵的关系**：$R[\mathbf{a}]_\times R^\top=[R\mathbf{a}]_\times$
+
+### 向量微分运算 (Vector Differential Operations)
+
+在场论和深度学习的反向传播中，微分算子 $\nabla$（Nabla）至关重要。
+
+**梯度 (Gradient)**
+
+作用于标量场 $f$，结果是向量，指向函数增长最快的方向：
+
+$$\nabla f = \left[ \frac{\partial f}{\partial x}, \frac{\partial f}{\partial y}, \frac{\partial f}{\partial z} \right]^T$$
+**散度 (Divergence)**
+
+作用于向量场 $\mathbf{F} = [P, Q, R]^T$，结果是标量：
+
+$$\text{div } \mathbf{F} = \nabla \cdot \mathbf{F} = \frac{\partial P}{\partial x} + \frac{\partial Q}{\partial y} + \frac{\partial R}{\partial z}$$
+
+几何意义： 衡量场在某点是“源”（流出）还是“汇”（流入）。
+
+**旋度 (Curl)**
+
+作用于向量场 $\mathbf{F}$，结果是向量：
+
+$$\text{curl } \mathbf{F} = \nabla \times \mathbf{F} = \begin{vmatrix} \mathbf{i} & \mathbf{j} & \mathbf{k} \\ \frac{\partial}{\partial x} & \frac{\partial}{\partial y} & \frac{\partial}{\partial z} \\ P & Q & R \end{vmatrix}$$
+
+几何意义： 衡量向量场在某点附近的旋转趋势。
+
+
+## 极几何
+
+**极几何（epipolar geometry）**，又译作核面几何，是描述同名像点与物点共面关系的几何模型。
+
+极几何中的一些基本概念如下：
+
+- 不同位姿拍摄同一物点（object point），该目标点在不同像片上的构像点被称为同名像点（corresponding image point，homologous image point）；
+- 相邻拍摄地点的连线被称为基线（baseline），或摄影基线（photographic baseline）；
+- 基线与像平面的交点被称为极点（epipole），或核点，
+- 基线和物点组成的平面被称为极平面（epipolar plane），或核面，
+- 极平面与像平面的交线被称为极线（epipolar line），或核线，
+
+![](https://pic1.zhimg.com/v2-0605293762e5b10e506584d0e1697e96_1440w.jpg)
+
+标准的极几何包含相机在两个位置$o_1$和$o_2$对于同一个三维空间点$\bf{X}$的观察（像平面）${\bf{x}}_1$和${\bf{x}}_2$，
+
+# Structure from Motion
+
+[(17 封私信 / 80 条消息) 《GAMES203：三维重建和理解》4 运动恢复结构（Structure from Motion，SfM） - 知乎](https://zhuanlan.zhihu.com/p/600738810)
+
+Structure from Motion（SfM）研究如何通过拍摄的一系列普通 RGB 图像估计出成像时照相机的相对位姿，由此构建出被拍摄物体的稀疏三维结构。简而言之，给定一些不同位置拍摄的图像，计算拍摄时的位置和物体形状。
+
+## 成像模型
+
+**针孔照相机（pinhole camera）** 模型是计算机视觉领域中主流的成像模型，可以简单地把它看作一个盒子，在盒子的某个面有一个小孔
+![](https://pic4.zhimg.com/v2-3b413ded94fb38da8a9f05c3574e2c11_1440w.jpg)
+
+- 场景中的每一点都有一根光线穿过针孔，交于相对的像平面；
+- 给定了一个透视投影，将三维空间映射到二维平面上；
+- 成像是翻转的，可以考虑针孔另一侧的虚拟像平面来纠正成像的翻转
+
+针对针孔照相机模型，从三维空间${\bf{X}}{(X,Y,Z)^T}$到二维平面${\bf{x}} (x,y)^T$的透视投影公式由如下关系描述：
+$$
+\eqalign{
+  & x = f{X \over Z}  \cr 
+  & y = f{Y \over Z} \cr} 
+$$
+
+- $f$ 是照相机的焦距（focal length），是从针孔到像平面的距离；
+- 注意：此处物点坐标${\bf{X}}{(X,Y,Z)^T}$隐去了从世界坐标系到局部观察坐标系的刚体变换
+
+深度估计是三维视觉中的一个重要问题，因为当给定了照相机的焦距$f$和目标的像素坐标${\bf{x}} (x,y)^T$时，如果估计出了目标的深度$Z$，那么可以推导目标的$X$和$Y$，即三维坐标${\bf{X}}{(X,Y,Z)^T}$。
+
+- 在图像空间中的任一点$\bf{x}$都对应了一条三维空间中通过针孔和该点的直线。在根据像素坐标推断三维坐标时，这条直线上的所有点都是潜在的三维空间目标点$\bf{X}$；
+- 当把一条线上的所有点沿着这条直线进行投影时，这些点被投影到了像平面上的同一个点，使用[齐次坐标](###齐次坐标)描述这一特征。
+
+针孔照相机模型给定了真实世界坐标${\bf{X}} = (X,Y,Z,1)^T$到像平面一点${\bf{x}}=(x,y,1)^T$的投影关系，关系的描述公式为
+$$
+\lambda \left[ {\matrix{
+   x  \cr 
+   y  \cr 
+   1  \cr 
+
+ } } \right] = \underbrace {\left[ {\matrix{
+   {f{s_x}} & {f{s_\theta }} & {{o_x}}  \cr 
+   0 & {f{s_y}} & {{o_y}}  \cr 
+   0 & 0 & 1  \cr 
+
+ } } \right]}_{照相机内参数 {\rm{ }}K}\underbrace {\left[ {\matrix{
+   1 & 0 & 0 & 0  \cr 
+   0 & 1 & 0 & 0  \cr 
+   0 & 0 & 1 & 0  \cr 
+
+ } } \right]}_{规范化投影矩阵 {\rm{ }}{\Pi _0}}\underbrace {\left[ {\matrix{
+   R & T  \cr 
+   0 & 1  \cr 
+
+ } } \right]}_{照相机外参数 {\rm{ }}g}\left[ {\matrix{
+   X  \cr 
+   Y  \cr 
+   Z  \cr 
+   1  \cr 
+
+ } } \right]
+$$
+-  内参数（intrinsic parameters）K 决定了照相机坐标系下空间点到图像点的映射，反映了照相机的焦距、光圈、成像分辨率等性质，在相机标定后，K可以视为单位矩阵；
+-  外参数（extrinsic parameters）g 由旋转分量R和平移分量T组成，反映了照相机在场景中的相对位姿；
+
+
 # 三维重建
 
 + **Stable-Zero123 / Zero-1-to-3**: 这是很多后续模型的基础。它学习了如何“旋转”一张图片，生成物体的背面和侧面图。
