--- a/图像相关.md
+++ b/图像相关.md
@@ -1,31 +1,73 @@
 
 # 数学基础
 
-## 向量运算
 
-### 齐次坐标
+## 几何变换
 
-齐次坐标（homogeneous coordinates）是坐标的一种表示形式，它用一个n+1 维向量或点表示一个 n维向量或点。
+常见的几何变换包括：缩放、旋转、翻转、错切和平移等，前四个变换都能写成
+$$
+\left[ \matrix{
+  {x'} \hfill \cr 
+  {y'} \hfill \cr}  \right] = \left[ {\matrix{
+   a & b  \cr 
+   c & d  \cr 
 
-在 $n$ 维欧氏空间中，一个点  
-$$  
-\mathbf{x} = (x_1, x_2, \dots, x_n)^\top \in \mathbb{R}^n  
-$$  
-对应的**齐次坐标表示**为：  
-$$  
-\tilde{\mathbf{x}} =  
-(\lambda x_1, \lambda x_2, \dots, \lambda x_n, \lambda)^\top  
-\in \mathbb{R}^{n+1}, \quad \lambda \neq 0  
+ } } \right]\left[ \matrix{
+  x \hfill \cr 
+  y \hfill \cr}  \right]
+$$
+即$X' = RX$，如绕原点旋转$\theta$的$R$为
+
+$$
+R = \left[ {\matrix{
+   {\cos \theta } & { - \sin \theta }  \cr 
+   {\sin \theta } & {\cos \theta }  \cr 
+
+ } } \right]
 $$
 
-二维平面中的直线 $ax + by + c = 0$ 的齐次坐标表示为 $\mathbf{l} = (a, b, c)^\top$
+平移一般写成
+$$
+\left[ \matrix{
+  {x'} \hfill \cr 
+  {y'} \hfill \cr}  \right] = \left[ \matrix{
+  x \hfill \cr 
+  y \hfill \cr}  \right] + \left[ \matrix{
+  {t_x} \hfill \cr 
+  {t_y} \hfill \cr}  \right]
+$$
+## 齐次坐标
 
-二维向量$(x,y)^T$的齐次坐标为$(x,y,0)^T$。
+齐次坐标（homogeneous coordinates）是坐标的一种表示形式，它用一个n+1 维向量或点表示一个n维向量或点。
 
-点在线上的条件：$\mathbf{l}^\top \mathbf{x} = 0$。
+>齐次坐标只是一种表达形式，可以直接使用向量的运算公式
+
+使用齐次坐标可以将上面所有的几何变换以统一的形式表达，即
+$$
+\begin{bmatrix} x' \\ y' \\ 1 \end{bmatrix} = \begin{bmatrix} a & b & t_x \\ c & d & t_y \\ 0 & 0 & 1 \end{bmatrix} \begin{bmatrix} x \\ y \\ 1 \end{bmatrix}
+$$
+二维点$(x,y)$的齐次坐标表示为 $\mathbf{x} = (x,y,1)^T$
+
+二维平面中的直线 $ax + by + c = 0$ 的齐次坐标表示为 $\mathbf{l} = (a, b, c)^T$
+
+二维向量$(x,y)^T$的齐次坐标为$(x,y,0)^T$，因为向量存在平移不变性，移动向量的位置不改变向量，所以第三个数为0。
+
+点在线上的条件：$\mathbf{l}^T \mathbf{x} = 0$
 
 在齐次坐标系下，点和直线对偶，两条直线$l_1$和$l_2$的交点可以通过两直线的叉积求出，通过两点${\bf{x}}_1$和${\bf{x}}_2$的直线可以通过两点的叉积求出。
 
+两点之差为向量
+$$
+{\left( {{x_1},{y_1},1} \right)^T} - {\left( {{x_2},{y_2},1} \right)^T} = {\left( {{x_1} - {x_2},{y_1} - {y_2},0} \right)^T}
+$$
+
+点的齐次坐标表示存在扩展的定义，即$(x_1/W, y_1/W, 1)^T, w≠0$，因此可以得到两点之和为两个点的中点：
+$$
+{\left( {{x_1},{y_1},1} \right)^T} + {\left( {{x_2},{y_2},1} \right)^T} = {\left( {{x_1} + {x_2},{y_1} + {y_2},2} \right)^T} = {\left( {{{{x_1} + {x_2}} \over 2},{{{y_1} + {y_2}} \over 2},1} \right)^T}
+$$
+
+
+## 向量运算
 
 ### 向量加法 (Vector Addition)
 
